--- a/css/global.css
+++ b/css/global.css
@@ -11,11 +11,33 @@ html, body, button, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p
 *::before,
 *::after{box-sizing:border-box;}
 
+@font-face {
+    font-family: 'SF Pro';
+    src: url('/assets/fonts/San\ Francisco\ Pro.ttf') format('ttf'); /* Modern Browsers */
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  /* ---------Sample---------- */
+.sample-box{
+    width: 400px;
+    height: 200px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: red;
+}
+
+
 /* ----------Generics-------- */
 .flex-center{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.relative{
+    position: relative;
 }
 
 .items-center{
@@ -32,7 +54,7 @@ html, body, button, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p
 }
 
 .text-standard{
-    font-size: 0.95rem;
+    font-size: 0.85rem;
 }
 
 
@@ -56,4 +78,29 @@ html, body, button, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p
     display: flex;
     align-items: center; 
     row-gap: 100px;
+    font-family: 'SF Pro', sans-serif;
 }
+
+.button:hover{
+    cursor: pointer;
+}
+
+.dropdown-content {
+    position: absolute;
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1; /* Ensure it's above other content */
+    /* Additional styling as needed */
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+  
